# alert-bot

./: README.md  pyproject.toml
src/alert_bot/: __init__.py  record.py  sender.py  writer.py
src/alert_bot/handlers/: __init__.py  notify.py  telegram.py
