[project]
name = "alert-bot"
version = "0.1.5"
description = "pipe output of terminal commands to any destination."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "toml>=0.10.2",
]

[project.scripts]
alert-bot = "alert_bot.writer:main"
alert-bot-daemon = "alert_bot.sender:main"
telegram-start = "alert_bot.handlers.telegram:main"

[project.optional-dependencies]
telegram = [
    "python-telegram-bot>=22.3",
]
notify = [
    "notify-send>=1.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
